Calendar for notes: Once sorted by tag/author or channel must exit before selecting new criteria. re #448

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -317,6 +317,22 @@
                         }
                     }
                 }
+                .note-row.tag-sort .tags {
+                    .tag {
+                        cursor:default !important;
+                    }
+                }
+                .note-row.author-sort .note-content {
+                    .note-author {
+                        cursor:default !important;
+                    }
+                }
+                .note-row.channel-sort .channels {
+                    .channel {
+                        cursor:default !important;
+                    }
+                }
+                
                 .note-row {
                     border-bottom: 1px solid @halflightmediumgrey;
                     margin-bottom:1em;
