Notes: header limit 50chrs. re #448

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -1033,6 +1033,7 @@ table.jCalendar td.no-data {
                         .note-header {
                              font-weight:800;
                              font-size:120%;
+                             line-height:19px;
                         }
                         .note-time {
                              color:@halfdarkmediumgrey;
@@ -1048,15 +1049,16 @@ table.jCalendar td.no-data {
                             overflow-y:auto;
                         }
                         a.readMore:hover {
-                            font-weight:800;
                             text-decoration: none;
+                            color:@darkcobalt;
                         }
                         a.readMore {
+                            font-weight:800;
                             cursor:pointer;
                             position: absolute;
                             right: 14px;
                             bottom: 14px;
-                            color:@black;
+                            color:@cobalt;
                         }
                      }
                 }
