--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -22,8 +22,9 @@
             background-color:@mediumgrey;
             #progress {
                 background-color:@cobalt;
-                width:0;
                 height:100%;
+                width:0;
+                transition: min-width .5s ease-in-out;
             }
         }
     }
