Calendar for notes: Quick sort now available without going back to original date range. re #519

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -348,17 +348,17 @@
                     }
                 }
                 .note-row.tag-sort .tags {
-                    .tag {
+                    .tag.not-clickable {
                         cursor:default !important;
                     }
                 }
                 .note-row.author-sort .note-content {
-                    .note-author {
+                    .note-author.not-clickable {
                         cursor:default !important;
                     }
                 }
                 .note-row.channel-sort .channels {
-                    .channel {
+                    .channel.not-clickable {
                         cursor:default !important;
                     }
                 }
