Calendar for notes: Multiday events overlapping transparencyeffect is stronger. re #519

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -233,10 +233,12 @@
                                             display:block !important;
                                             height:4px;
                                             fill:transparent;
-                                            background-color:#047ecc;
+                                            // background-color:rgba(5, 123, 236, 1);
+                                            background-color:rgba(5, 128, 255, 0.5);
+                                            // background-color:#047ecc;
                                             position: absolute;
                                             top:20px;
-                                            opacity: .7;
+                                            // opacity: .7;
                                         }
                                         .NoteEvent.revealed, 
                                         .NoteEvent.ShowMore 
