Calendar for notes: related events listing ready. re #519

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -442,6 +442,8 @@
                         margin-bottom:0;
                         .related-events {
                             display:none;
+                            white-space: nowrap;
+                            overflow-x: hidden;
                             border-top: 1px solid @halflightmediumgrey;
                             padding-top: 10px;
                             font-size:85%;
