New Taxonomy: Details results interpreted.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3265,7 +3265,7 @@ a.dp-choose-date {
     position:static;
     transform: rotate(0);
     transition: .3s;
-    width:inherit;
+    width:11px;
 }
 #revenue2 .details #table .table-item #filter-caret-wrapper .filter-caret.active {
     transform: rotate(180deg);
