New Taxonomy: attendance-tab corrections ready.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2726,19 +2726,24 @@ div.dp-popup td.disabled {
 .multicolor-wrapper:nth-child(2) .multicolor,
 .multicolor:nth-child(2) 
 {
-    color: @cafe;
+    color: @programming;
 }
 .multicolor-wrapper:nth-child(3) .multicolor,
 .multicolor:nth-child(3) 
 {
-    color: @giftstore;
+    color: @membership;
 }
 .multicolor-wrapper:nth-child(4) .multicolor,
-.multicolor:nth-child(4),
+.multicolor:nth-child(4)
+{
+    color: @cafe;
+}
+.multicolor-wrapper:nth-child(5) .multicolor,
+.multicolor:nth-child(5),
 .multicolor-wrapper:last-child .multicolor,
 .multicolor:last-child 
 {
-    color: @membership;
+    color: @giftstore;
 }
 
 .multicolor-wrapper:nth-child(1) .multicolorbg,
@@ -2749,19 +2754,24 @@ div.dp-popup td.disabled {
 .multicolor-wrapper:nth-child(2) .multicolorbg,
 .multicolorbg:nth-child(2)
 {
-    background-color: @cafe;
+    background-color: @programming;
 }
 .multicolor-wrapper:nth-child(3) .multicolorbg,
 .multicolorbg:nth-child(3)
 {
-    background-color: @giftstore;
+    background-color: @membership;
 }
 .multicolor-wrapper:nth-child(4) .multicolorbg,
-.multicolorbg:nth-child(4),
+.multicolorbg:nth-child(4)
+{
+    background-color: @cafe;
+}
+.multicolor-wrapper:nth-child(5) .multicolorbg,
+.multicolorbg:nth-child(5),
 .multicolor-wrapper:last-child .multicolorbg,
 .multicolorbg:last-child
 {
-    background-color: @membership;
+    background-color: @giftstore;
 }
 
 .multicolor-wrapper:nth-child(1) .multicolorfl,
@@ -2772,19 +2782,24 @@ div.dp-popup td.disabled {
 .multicolor-wrapper:nth-child(2) .multicolorfl,
 .multicolorfl:nth-child(2)
 {
-    fill: @cafe;
+    fill: @programming;
 }
 .multicolor-wrapper:nth-child(3) .multicolorfl,
 .multicolorfl:nth-child(3)
 {
-    fill: @giftstore;
+    fill: @membership;
 }
 .multicolor-wrapper:nth-child(4) .multicolorfl,
-.multicolorfl:nth-child(4),
+.multicolorfl:nth-child(4)
+{
+    fill: @cafe;
+}
+.multicolor-wrapper:nth-child(5) .multicolorfl,
+.multicolorfl:nth-child(5),
 .multicolor-wrapper:last-child .multicolorfl,
 .multicolorfl:last-child
 {
-    fill: @membership;
+    fill: @giftstore;
 }
 
 form.inline-block {
