--- a/laravel/resources/assets/less/colors.less
+++ b/laravel/resources/assets/less/colors.less
@@ -50,5 +50,6 @@
 @giftstore: rgba(178,202,19,1);
 @membership: rgba(76,27,97,1);
 @membership2: rgba(176,141,181,1);
+@programming: #ffc705;
 
 @grid-gutter-width: 15px;
