--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -696,10 +696,12 @@ div.user-wrapper {
     text-align: center;
     text-transform: uppercase;
     .label {
-        font-size: 14px;   /* 160% */
+        font-size: 12px;   /* 160% */
         font-weight: 300;
-        letter-spacing: .1em;
+        letter-spacing: 0em;
         padding: 0;
+        line-height:100%;
+        display:inline-block;
         white-space: normal;
         @media (max-width: 1199px) {
             font-size: 160%;
@@ -740,7 +742,7 @@ div.user-wrapper {
         font-weight: 400;
         left: 50%;
         position: absolute;
-        top: 46%;
+        top: 52%;
         transform: translate(-50%,-50%);
         @media (max-width: 1199px) {
             font-size: 317%;
