New Taxonomy: Notes updated for new taxonomy.

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -481,13 +481,16 @@
                             margin-bottom:4px;
                             cursor:pointer;
                         }
-                        .channel.gate {
+                        .channel.guest_services {
                             background-color:@boxoffice;
+                        }
+                        .channel.programming {
+                            background-color:@programming;
                         }
                         .channel.membership {
                             background-color:@membership;
                         }
-                        .channel.cafe {
+                        .channel.fb {
                             background-color:@cafe;
                         }
                         .channel.store {
@@ -546,6 +549,10 @@
             }
         }
         .modal-body {
+            
+            .channel {
+                margin-bottom:4px;
+            }
             .required-text {
                 text-align:right;
                 position:relative;
