Color configuration for new Photos channel. re #532

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2766,6 +2766,10 @@ div.dp-popup td.disabled {
 // {
 //     color: @giftstore;
 // }
+.multicolor-wrapper.photos .multicolor
+{
+    color: @photos !important;
+}
 
 .multicolor-wrapper.guest_services .multicolorbg,
 .multicolorbg.guest_services
@@ -2821,6 +2825,12 @@ div.dp-popup td.disabled {
 //     background-color: @giftstore;
 // }
 
+.multicolor-wrapper.photos .multicolorbg,
+.multicolorbg.photos
+{
+    background-color: @photos !important;
+}
+
 .multicolor-wrapper.guest_services .multicolorfl
 {
     fill: @boxoffice;
@@ -2868,6 +2878,11 @@ div.dp-popup td.disabled {
 // {
 //     fill: @giftstore;
 // }
+
+.multicolor-wrapper.photos .multicolorfl
+{
+    fill: @photos;
+}
 
 form.inline-block {
     vertical-align:middle;
