--- a/laravel/resources/assets/less/colors.less
+++ b/laravel/resources/assets/less/colors.less
@@ -51,5 +51,6 @@
 @membership: rgba(76,27,97,1);
 @membership2: rgba(176,141,181,1);
 @programming: #ffc705;
+@photos: rgba(176,0,0,1);
 
 @grid-gutter-width: 15px;
